# lBFGS_AutoDiff

./: CMakeLists.txt  README.md  ellipse.cpp  exponential.cpp  powell.cpp  quadratic.cpp  rosenbrock.cpp
LBFGSpp/: example-quadratic  example-rosenbrock-box
